Fixing bug: removing overflow hidden from body

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -8,7 +8,6 @@ html {
 }
 body {
 	margin: 0;
-	overflow: hidden;
 }
 
 @tailwind components;
